Revert "Fix form layout issue"
This reverts commit acd0fd57df3582edc2724d365745835d41f485a0.

--- a/axelor-front/src/views/form/builder/form-editors.module.scss
+++ b/axelor-front/src/views/form/builder/form-editors.module.scss
@@ -39,5 +39,8 @@
         flex: 1;
       }
     }
+    .item:last-child {
+      margin-bottom: 0.5rem;
+    }
   }
 }
